--- a/Chess/MainWindow.xaml
+++ b/Chess/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="Chess.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:view="clr-namespace:Chess.Views"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <view:ChessBoardView />
     </Grid>
 </Window>
