Uninstall WPFToolkit. Change control template of toggle button used for BoardLocation
Not sur why the WPFToolkit was installed. It's now removed. Board
locations are now selectable. A red border appears upon MouseOver and
selection. When a BoardLocation is disabled, there won't be a change in
visuals - that functionality was removed by overriding the control
template.

--- a/Chess/MainWindow.xaml
+++ b/Chess/MainWindow.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="Chess.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:view="clr-namespace:Chess.Views"
+        xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" x:Class="Chess.MainWindow"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <view:ChessBoardView />
