--- a/Chess/App.xaml
+++ b/Chess/App.xaml
@@ -1,26 +1,68 @@
-﻿<Application x:Class="Chess.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:models="clr-namespace:Chess.Models"
+             xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" x:Class="Chess.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        
-        
+
+
         <SolidColorBrush x:Key="DarkBoardLocation" Color="Gray"/>
         <SolidColorBrush x:Key="LightBoardLocation" Color="Beige"/>
 
+        <Color x:Key="BoardLocationMouseOver">Red</Color>
+
+        
+        <Style TargetType="{x:Type ToggleButton}" x:Key="BoardLocationControlTemplate">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                        <Grid Background='{TemplateBinding Background}' x:Name="root">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="20" />
+                            </Grid.ColumnDefinitions>
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="MouseOver">
+                                        <Storyboard x:Name="MouseOverStoryboard">
+                                            <ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
+                                          Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1">
+                                            </ColorAnimation>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                                <VisualStateGroup x:Name="CheckStates">
+                                    <VisualState x:Name="Checked" >
+                                        <Storyboard >
+                                            <ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
+                                          Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1">
+                                            </ColorAnimation>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Unchecked" />
+                                    <VisualState x:Name="Indeterminate" />
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <Border x:Name="Border" CornerRadius="2" BorderThickness="1" BorderBrush="Transparent"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
         <DataTemplate DataType="{x:Type models:BoardLocation}">
-            <ToggleButton x:Name="background" />
+            <ToggleButton x:Name="mainControl" IsEnabled="{Binding CanBeSelected}" Style="{DynamicResource BoardLocationControlTemplate}"/>
             <DataTemplate.Triggers>
                 <DataTrigger Binding="{Binding Colour}" Value="Dark">
-                    <Setter TargetName="background" Property="Background" Value="{StaticResource DarkBoardLocation}"/>
+                    <Setter TargetName="mainControl" Property="Background" Value="{StaticResource DarkBoardLocation}"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding Colour}" Value="Light">
-                    <Setter TargetName="background" Property="Background" Value="{StaticResource LightBoardLocation}"/>
+                    <Setter TargetName="mainControl" Property="Background" Value="{StaticResource LightBoardLocation}"/>
                 </DataTrigger>
             </DataTemplate.Triggers>
-            
         </DataTemplate>
+
     </Application.Resources>
 </Application>
