Piece heirarchy. Movable pieces.
Instead of enumerating piece types I decided to create a heirarchy.
There's now a rudimentary piece moving system in place. There's a visual
glitch with selecting boardlocations but I'm fairly sure I know exactly
what's wrong.

Instead of defining the togglebutton control template in a style the
template is defined as it's own key. The datatemplate of boardlocation is
now defined in ChessBoardView.xaml.

--- a/Chess/App.xaml
+++ b/Chess/App.xaml
@@ -12,55 +12,43 @@
 
         <Color x:Key="BoardLocationMouseOver">Red</Color>
 
+        <ControlTemplate x:Key="BaseBoardLocationTemplate" TargetType="{x:Type ToggleButton}">
+            <Border x:Name="Border" CornerRadius="0" BorderThickness="0" BorderBrush="Transparent" Background="{TemplateBinding Background}">
+                <VisualStateManager.VisualStateGroups>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="MouseOver">
+                            <Storyboard x:Name="MouseOverStoryboard">
+                                <ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
+                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
+                                <ThicknessAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderThickness" To="2" Duration="0:0:0.1"/>
+                            </Storyboard>
+                        </VisualState>
+                    </VisualStateGroup>
+                    <VisualStateGroup x:Name="CheckStates">
+
+                        <VisualState x:Name="Checked" >
+                            <Storyboard >
+
+                                <ColorAnimation Storyboard.TargetProperty="(Border.Background).Color"
+                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
+                                <!--<ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
+                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
+                                <ThicknessAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderThickness" To="2" Duration="0:0:0.1"/>-->
+                            </Storyboard>
+                        </VisualState>
+                        <VisualState x:Name="Unchecked" />
+                        <VisualState x:Name="Indeterminate" />
+                    </VisualStateGroup>
+                </VisualStateManager.VisualStateGroups>
+                <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
+            </Border>
+        </ControlTemplate>
+
         
-        <Style TargetType="{x:Type ToggleButton}" x:Key="BoardLocationControlTemplate">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ToggleButton}">
-                        <Border x:Name="Border" CornerRadius="0" BorderThickness="0" BorderBrush="Transparent" Background="{TemplateBinding Background}">
-                        <VisualStateManager.VisualStateGroups>
-                                <VisualStateGroup x:Name="CommonStates">
-                                    <VisualState x:Name="Normal" />
-                                    <VisualState x:Name="MouseOver">
-                                        <Storyboard x:Name="MouseOverStoryboard">
-                                            <ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
-                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
-                                            <ThicknessAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderThickness" To="2" Duration="0:0:0.1"/>
-                                        </Storyboard>
-                                    </VisualState>
-                                </VisualStateGroup>
-                                <VisualStateGroup x:Name="CheckStates">
-                                    <VisualState x:Name="Checked" >
-                                        <Storyboard >
-                                            <ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
-                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
-                                            <ThicknessAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderThickness" To="2" Duration="0:0:0.1"/>
-                                        </Storyboard>
-                                    </VisualState>
-                                    <VisualState x:Name="Unchecked" />
-                                    <VisualState x:Name="Indeterminate" />
-                                </VisualStateGroup>
-                            </VisualStateManager.VisualStateGroups>
-                            <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
 
-        <DataTemplate DataType="{x:Type models:BoardLocation}">
-            <ToggleButton x:Name="mainControl" IsEnabled="{Binding CanBeSelected}" Style="{DynamicResource BoardLocationControlTemplate}"
-                          Content="{Binding Piece}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            <DataTemplate.Triggers>
-                <DataTrigger Binding="{Binding Colour}" Value="Dark">
-                    <Setter TargetName="mainControl" Property="Background" Value="{StaticResource DarkBoardLocation}"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding Colour}" Value="Light">
-                    <Setter TargetName="mainControl" Property="Background" Value="{StaticResource LightBoardLocation}"/>
-                </DataTrigger>
-            </DataTemplate.Triggers>
-        </DataTemplate>
-
+        <!--Define the datatemplate for chess pieces. Currently the pieces are represented by their toString() method.
+            The colour of the text indicates the colour of the piece-->
         <DataTemplate DataType="{x:Type models:ChessPiece}">
             <TextBlock x:Name="root" Foreground="White" Background="Transparent" Text="{Binding}"/>
             <DataTemplate.Triggers>
