Implement turns. Change animation for BoardLocation.
Now a single enum represents the "colours" of the board. There aren't
separate enums for BoardLocations, ChessPieces or player turns. They all
use the same enum which has two values: white and black.

Changed the animation implementation from VisualStates to Triggers.

Implemented turns. Now only white pieces can be moved at the beginning.
Upon moving a piece the turn changes and only pieces of that player can be
selected and moved.

--- a/Chess/Views/ChessBoardView.xaml
+++ b/Chess/Views/ChessBoardView.xaml
@@ -27,10 +27,10 @@
                 <ToggleButton x:Name="mainControl" IsChecked="{Binding IsSelected}" Template="{StaticResource BaseBoardLocationTemplate}"
                           Content="{Binding Piece}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Command="vm:ChessBoardViewModel.SelectLocationCommand" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content}"/>
                 <DataTemplate.Triggers>
-                    <DataTrigger Binding="{Binding Colour}" Value="Dark">
+                    <DataTrigger Binding="{Binding Colour}" Value="Black">
                         <Setter TargetName="mainControl" Property="Background" Value="{StaticResource DarkBoardLocation}"/>
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Colour}" Value="Light">
+                    <DataTrigger Binding="{Binding Colour}" Value="White">
                         <Setter TargetName="mainControl" Property="Background" Value="{StaticResource LightBoardLocation}"/>
                     </DataTrigger>
                     <Trigger Property="Content" Value="{x:Null}" SourceName="mainControl">
