--- a/Chess/App.xaml
+++ b/Chess/App.xaml
@@ -7,42 +7,43 @@
     <Application.Resources>
 
 
-        <SolidColorBrush x:Key="DarkBoardLocation" Color="Gray"/>
-        <SolidColorBrush x:Key="LightBoardLocation" Color="Beige"/>
-
+        <SolidColorBrush x:Key="DarkBoardLocation" Color="#8B6246"/>
+        <SolidColorBrush x:Key="LightBoardLocation" Color="#deb887"/>
         <Color x:Key="BoardLocationMouseOver">Red</Color>
+        
+        <Duration x:Key="StandardDuration">0:0:0.2</Duration>
 
         <ControlTemplate x:Key="BaseBoardLocationTemplate" TargetType="{x:Type ToggleButton}">
-            <Border x:Name="Border" CornerRadius="0" BorderThickness="0" BorderBrush="Transparent" Background="{TemplateBinding Background}">
-                <VisualStateManager.VisualStateGroups>
-                    <VisualStateGroup x:Name="CommonStates">
-                        <VisualState x:Name="Normal" />
-                        <VisualState x:Name="MouseOver">
-                            <Storyboard x:Name="MouseOverStoryboard">
-                                <ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
-                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
-                                <ThicknessAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderThickness" To="2" Duration="0:0:0.1"/>
-                            </Storyboard>
-                        </VisualState>
-                    </VisualStateGroup>
-                    <VisualStateGroup x:Name="CheckStates">
-
-                        <VisualState x:Name="Checked" >
-                            <Storyboard >
-
-                                <ColorAnimation Storyboard.TargetProperty="(Border.Background).Color"
-                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
-                                <!--<ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color"
-                                                            Storyboard.TargetName="Border" To="{StaticResource BoardLocationMouseOver}" Duration="0:0:0.1"/>
-                                <ThicknessAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderThickness" To="2" Duration="0:0:0.1"/>-->
-                            </Storyboard>
-                        </VisualState>
-                        <VisualState x:Name="Unchecked" />
-                        <VisualState x:Name="Indeterminate" />
-                    </VisualStateGroup>
-                </VisualStateManager.VisualStateGroups>
+            <Border x:Name="Border" BorderThickness="0" BorderBrush="Transparent" Background="{TemplateBinding Background}">
                 <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
             </Border>
+            <ControlTemplate.Triggers>
+                <!--If the mouse is over the control and the toggle button is NOT checked, animate a border into view-->
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition SourceName="Border" Property="IsMouseOver" Value="True"/>
+                        <Condition Property="IsChecked" Value="False"/>
+                    </MultiTrigger.Conditions>
+                    <MultiTrigger.EnterActions>
+                        <BeginStoryboard Name="MouseOverStoryboard">
+                            <Storyboard >
+                                <ColorAnimation Storyboard.TargetProperty="(Border.BorderBrush).Color" 
+                                                Storyboard.TargetName="Border" 
+                                                To="{StaticResource BoardLocationMouseOver}" 
+                                                Duration="{StaticResource StandardDuration}" />
+                                <ThicknessAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderThickness" To="2" Duration="{StaticResource StandardDuration}"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </MultiTrigger.EnterActions>
+                    <MultiTrigger.ExitActions>
+                        <RemoveStoryboard BeginStoryboardName="MouseOverStoryboard"/>
+                    </MultiTrigger.ExitActions>
+                </MultiTrigger>
+                
+                <Trigger Property="IsChecked" Value="True">
+                    <Setter TargetName="Border" Property="Background" Value="Red"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
         </ControlTemplate>
 
         
