Fix code analysis issues
Ran code analysis on the solution and fixed some issues. Nothing too major. The custome dictionary isn't working and I'm getting fed up with it.

--- a/Chess/MainWindow.xaml
+++ b/Chess/MainWindow.xaml
@@ -30,7 +30,7 @@
                 </Style>
             </Label.Style> 
         </Label>
-        <view:ChessBoardView  x:Name="board" Grid.Row="1"/>
+        <view:ChessboardView  x:Name="board" Grid.Row="1"/>
         
         
     </Grid>
