--- a/Chess/Views/ChessBoardView.xaml
+++ b/Chess/Views/ChessBoardView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Chess.Views.ChessBoardView"
+﻿<UserControl x:Class="Chess.Views.ChessboardView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,10 +10,10 @@
              tk:CommandSinkBinding.CommandSink="{Binding}"
              d:DesignHeight="300" d:DesignWidth="300" >
     <UserControl.DataContext>
-        <vm:ChessBoardViewModel />
+        <vm:ChessboardViewModel />
     </UserControl.DataContext>
     <UserControl.CommandBindings>
-        <tk:CommandSinkBinding Command="vm:ChessBoardViewModel.SelectLocationCommand"/>
+        <tk:CommandSinkBinding Command="vm:ChessboardViewModel.SelectLocationCommand"/>
         
     </UserControl.CommandBindings>
     <ItemsControl ItemsSource="{Binding Locations}">
@@ -25,7 +25,7 @@
         <ItemsControl.ItemTemplate>
             <DataTemplate DataType="{x:Type m:BoardLocation}">
                 <ToggleButton x:Name="mainControl" IsChecked="{Binding IsSelected}" Template="{StaticResource BaseBoardLocationTemplate}"
-                          Content="{Binding Piece}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Command="vm:ChessBoardViewModel.SelectLocationCommand" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content}"/>
+                          Content="{Binding Piece}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Command="vm:ChessboardViewModel.SelectLocationCommand" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content}"/>
                 <DataTemplate.Triggers>
                     <DataTrigger Binding="{Binding Colour}" Value="Black">
                         <Setter TargetName="mainControl" Property="Background" Value="{StaticResource DarkBoardLocation}"/>
