Lots of things.
- Added AlphaBeta
- Optimized away building a new chess board
- Chess Move has an all args constructor and no default constructor
- Added a branch count variable

--- a/Chess/MainWindow.xaml
+++ b/Chess/MainWindow.xaml
@@ -47,7 +47,8 @@
                         </Style.Triggers>
                     </Style>
                 </Label.Style>
-            </Label>  
+            </Label> 
+            <Label Content="{Binding ElementName=board, Path=DataContext.BranchCount}"/>
         </StackPanel>
         
         <view:ChessboardView  x:Name="board" Grid.Row="1"/>
